# WeiBoCrawler

./: .bat  .gitignore  README.md  config.toml  data1.json  demo.ipynb  demo.json  demo.py  index.html  list.json  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
.cursor/rules/: floating-scroll-area.mdc  frontend-code-organization.mdc  no-native-dialogs-except-path.mdc  tauri-modular-commands.mdc  use-shadcn-components.mdc
.github/workflows/: publish-tauri.yml
SourceCode/: README.md  config.toml  demo.py
SourceCode/database/: body.json  list.json  util.py
SourceCode/oldcode/: get_main_body.py
SourceCode/pack/: data.py  database.py  get_body_data.py  get_comment1_data.py  get_comment2_data.py  get_list_data.py
SourceCode/parse/: parse_comments_data.py  parse_list_html.py  parse_list_resp.py  process_body.py  process_body_json.py  process_comment.py  process_comment_json.py  process_list.py  process_list_json.py  util.py
SourceCode/request/: get_body_request.py  get_comment_request.py  get_list_request.py  request.toml  util.py
SourceCode/type/: __init__.py
SourceCode/util/: __init__.py
WeiBoCrawler/: README.md  config.toml
WeiBoCrawler/database/: __init__.py  body.json  comment1.json  comment2.json  list.json  sql.py  sql_record.py
WeiBoCrawler/oldcode/: __init__.py
WeiBoCrawler/pack/: BaseDownloader.py  __init__.py  (+4 more)
docs/: design.md  update.md
oldcode/: main.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/command/: account.rs  home.rs  mod.rs  proxy.rs  record.rs  request_log.rs  task.rs  ui.rs  window.rs
src-tauri/src/db/: account_repo.rs  app_event_repo.rs  crawl_request_repo.rs  migration.rs  mod.rs  proxy_repo.rs  proxy_runtime_repo.rs  record_repo.rs  request_log_repo.rs  risk_event_repo.rs  settings_repo.rs  task_repo.rs  weibo_account_repo.rs
src-tauri/src/model/: account.rs  crawl_request.rs  mod.rs  platform.rs  proxy.rs  record.rs  stats.rs  task.rs  weibo_task.rs
src-tauri/src/queue/: dispatcher.rs  message.rs  mod.rs  registry.rs  risk.rs  runtime_buffer.rs  worker.rs
src-tauri/src/service/: account_service.rs  geoip.rs  mod.rs  proxy_service.rs  record_service.rs  settings_service.rs  stats_service.rs  task_service.rs
src-tauri/src/weibo/: api.rs  crawl.rs  list_parse.rs  mod.rs  qrcode.rs  session.rs  sina_profile.rs
utils/: main.py
web/: README.md  main.py
(+89 files in other folders)
