[project]
name = "weibocrawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.4",
    "pandas>=2.0.3",
    "parsel>=1.9.1",
    "pydantic>=2.10.6",
    "rich>=13.7.1",
    "tinydb>=4.8.2",
    "toml>=0.10.2",
]
